Теперь если монстр занят другим игроком, то он об этом сообщает своему новому клиенту и так же позволяет ему уйти...